# mixdog

./: .bench-base1.json  .bench-base2.json  .bench-base3.json  .bench-baseline.json  .bench-compact1.json  .bench-compact2.json  .bench-compact3.json  .bench-cwc.json  .bench-cwc10-p1.json  .bench-cwc10-p2.json  .bench-cwc10-p3.json  .bench-cwc10-p4.json  .bench-cwc10-p5.json  .bench-cwc11-p1.json  .bench-cwc11-p2.json  .bench-cwc11-p3.json  .bench-cwc11-p4.json  .bench-cwc11-p5.json  .bench-cwc12-p1.json  .bench-cwc12-p2.json  .bench-cwc12-p3.json  .bench-cwc12-p4.json  .bench-cwc12-p5.json  .bench-cwc14-p1.json  .bench-cwc14-p2.json  .bench-cwc14-p3.json  .bench-cwc14-p4.json  .bench-cwc14-p5.json  .bench-cwc15-p1.json  .bench-cwc15-p2.json  .bench-cwc15-p3.json  .bench-cwc15-p4.json  .bench-cwc15-p5.json  .bench-cwc16-p1.json  .bench-cwc16-p2.json  .bench-cwc16-p3.json  .bench-cwc16-p4.json  .bench-cwc16-p5.json  .bench-cwc17-p1.json  .bench-cwc17-p2.json  (+84 more)
.github/: FUNDING.yml
.mixdog-smoke-data-empty/: modelsdev-catalog.json
bench-results/: tui-runtime-load-baseline.json  wh-sol-high-grade.txt  wh-sol-high.json  wh-sol-medium.json  wh-terra-high-grade.txt  wh-terra-high.json  wh-terra-medium.json  wh2-sol-high-grade.txt  wh2-sol-high.json  wh2-sol-medium-grade.txt  wh2-sol-medium.json  wh2-terra-high.json  wh2-terra-medium-grade.txt  wh2-terra-medium.json
docs/: agent-tasks.md  features.md  runtime-release.md  tool-calling-bench-notes.md
native/mixdog-graph/: Cargo.toml
native/mixdog-graph/src/: main.rs
native/mixdog-graph/tests/: protocol.rs
src/: app.mjs  (+6 more)
(+1724 files in other folders)
